[package]
name = "nextera_jwt"
version = "0.1.0"
authors = ["nyan.ucsp <nyan.ucsp@gmail.com>"]
description = "Next Era JSON Web Token Attribute"
keywords = ["jwt"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Next-Era-Myanmar/nextera_jwt"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.92"
syn = { version = "2.0.90", features = ["full"] }
actix-web = "4.9.0"
nextera_utils = "0.1.6"

